Translate 2021-09-23-unused-beans.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-09-29 07:03+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-10-01 16:22+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Unused Beans and Why We Remove Them'\n"
@@ -44,144 +44,124 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:13
-#, fuzzy
 msgid "Quarkus is a build-time oriented stack, i.e. it tries to do as much as possible at build time to improve the startup time and memory usage of your application.  However, it's not always so easy and straightforward as many existing frameworks and libraries do not take this design choice into account.  And CDI is one of them."
 msgstr "Quarkusはビルド時重視のスタックです。つまり、アプリケーションの起動時間とメモリ使用量を改善するために、ビルド時に可能な限りのことをしようとします。しかし、既存のフレームワークやライブラリの多くがこの設計上の選択を考慮していないため、必ずしも簡単でわかりやすいものではありません。CDIはその一つです。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-23-unused-beans.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Why Bother"
-msgstr "Why Bother"
+msgstr "なぜわざわざ"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:22
-#, fuzzy
 msgid "A traditional CDI container attempts to find all beans during the application bootstrap.  For each bean a metadata object is created and kept for the lifetime of the application.  This allows for certain degree of dynamicity at runtime but it's suboptimal when it comes to memory consumption and application startup time.  Quarkus, on the other hand, attempts to detect and remove all _unused_ beans, interceptors and decorators during build by default.  And the reason is simple.  This optimization helps to minimize the amount of generated classes and the number of metadata objects used at runtime, thus conserving memory."
-msgstr "従来のCDIコンテナは、アプリケーションのブートストラップ時にすべてのBeanを見つけようとします。各Beanに対して、メタデータオブジェクトが作成され、アプリケーションの寿命まで保持されます。これにより、ランタイムにある程度の動的性を持たせることができますが、メモリ消費やアプリケーションの起動時間に関しては最適ではありません。一方、Quarkusは、デフォルトでビルド時に _未使用の_Bean、Interceptor、Decoratorをすべて検出して削除しようとします。その理由は簡単です。この最適化により、生成されるクラスの量と実行時に使用されるメタデータオブジェクトの数を最小限に抑え、メモリを節約することができます。"
+msgstr "従来のCDIコンテナは、アプリケーションのブートストラップ時にすべてのBeanを見つけようとします。各Beanに対して、メタデータオブジェクトが作成され、アプリケーションの寿命まで保持されます。これにより、ランタイムにある程度の動的性を持たせることができますが、メモリ消費やアプリケーションの起動時間に関しては最適ではありません。一方、Quarkusは、デフォルトでビルド時に _未使用の_ Bean、Interceptor、Decoratorをすべて検出して削除しようとします。その理由は簡単です。この最適化により、生成されるクラスの量と実行時に使用されるメタデータオブジェクトの数を最小限に抑え、メモリを節約することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:29
-#, fuzzy
 msgid "Speaking of generated classes.  The bean discovery, validation and wiring all components together - all this is perfomed at build time.  Quarkus then stores the collected metadata in the bytecode, i.e. for each bean one or more classes are generated.  In order to fullfill some basic CDI API requirements, a bean has at least a corresponding `javax.enterprise.inject.spi.Bean` implementation.  If it's a normal scoped bean then a client proxy class must be also generated.  Finally, intercepted and decorated beans require some more internal constructs."
-msgstr "生成されたクラスについて。Beanの検出、検証、すべてのコンポーネントの配線は、すべてビルド時に実行されます。Quarkusでは、収集したメタデータをバイトコードに格納し、各Beanに対して1つ以上のクラスを生成します。いくつかの基本的なCDI API要件を満たすために、Beanは少なくとも対応する `javax.enterprise.inject.spi.Bean` の実装を持っています。それが通常のスコープ付きBeanである場合，クライアントプロキシクラスも生成されなければならない。最後に，インターセプトされたBean及び装飾されたBeanは，さらにいくつかの内部構造を必要とする。"
+msgstr "生成されたクラスについて。Beanの検出、検証、すべてのコンポーネントのワイヤリングは、すべてビルド時に実行されます。Quarkusでは、収集したメタデータをバイトコードに格納し、各Beanに対して1つ以上のクラスを生成します。いくつかの基本的なCDI API要件を満たすために、Beanは少なくとも対応する `javax.enterprise.inject.spi.Bean` の実装を持っています。それが通常のスコープ付きBeanである場合，クライアントプロキシクラスも生成されなければなりません。最後に，インターセプトされたBean及び装飾されたBeanは，さらにいくつかの内部構造を必要とします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:36
-#, fuzzy
 msgid "Imagine that your application contains 50 beans that are actually not used anywhere.  If they have a normal scope (e.g. `@ApplicationScoped`) and are intercepted (e.g. declare a method annotated with `@Transactional`) you can expect more than 150 generated classes.  And these classes are completely useless.  Still, the container would have to instantiate and hold a reference on those 50+ bean metadata classes.  Needless to say, that the bean classes and any referenced classes cannot be a subject to dead code elimination when a native image is generated.  Therefore, Quarkus implements an algorithm to get rid of all these classes."
 msgstr "アプリケーションに、実際にはどこにも使われていない50個のBeanが含まれているとします。それらが通常のスコープ（例： `@ApplicationScoped` ）を持ち、インターセプトされた場合（例： `@Transactional` でアノテーションされたメソッドを宣言する）、150以上のクラスが生成されることが予想されます。そして、これらのクラスは全く役に立たない。それでも、コンテナはこれらの50以上のBeanメタデータクラスをインスタンス化し、参照を保持する必要があります。言うまでもなく、ネイティブイメージを生成する際に、Beanクラスや参照されるクラスをデッドコード排除の対象とすることはできません。そこで、Quarkusでは、これらのクラスをすべて削除するアルゴリズムを実装しています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-23-unused-beans.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What’s Actually Removed?"
 msgstr "実際に除去されるものは？"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:41
-#, fuzzy
 msgid "Quarkus first identifies so-called _unremovable_ beans that form the roots in the dependency tree.  Unremovable beans:"
-msgstr "Quarkusはまず、依存関係ツリーのルートを形成する、いわゆる取り外し _不可能な_ビーンを特定します。取り外せないビーン"
+msgstr "Quarkusはまず、依存関係ツリーのルートを形成する、いわゆる _削除不可能な_Beanを特定します。削除不可能なBean:"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:43
-#, fuzzy
 msgid "declare an observer method, or"
 msgstr "オブザーバー・メソッドを宣言するか"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:44
-#, fuzzy
 msgid "have a name designated via `@Named`, or"
-msgstr "は、 `@Named` を通して指定された名前を持っています。"
+msgstr "`@Named` を通して指定された名前を持っているか"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:45
-#, fuzzy
 msgid "are annotated with `@io.quarkus.arc.Unremovable`, or"
-msgstr "は、 `@io.quarkus.arc.Unremovable` でアノテーションされています。"
+msgstr "`@io.quarkus.arc.Unremovable` でアノテーションされているか"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:46
-#, fuzzy
 msgid "are excluded via the `quarkus.arc.unremovable-types` config property, or"
-msgstr "は、 `quarkus.arc.unremovable-types` コンフィグ・プロパティによって除外されます。"
+msgstr "`quarkus.arc.unremovable-types` コンフィグ・プロパティによって除外されているか"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:47
-#, fuzzy
 msgid "are otherwise identified by Quarkus extensions."
-msgstr "は、Quarkusの拡張子で識別されます。"
+msgstr "Quarkusのエクステンションで識別されているか。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:51
-#, fuzzy
 msgid "The last point is probably most important, because this is how application entry points are made unremovable.  A good example is a JAX-RS resource class, identified by the RESTEasy extension.  Another example is a bean which declares a `@Scheduled` method, identified by the Scheduler extension."
-msgstr "最後の点が最も重要であると思われます。なぜならば、これはアプリケーションのエントリーポイントが削除できないようにする方法だからです。例えば、RESTEasyエクステンションで識別されるJAX-RSリソースクラスが良い例です。もう1つの例は、 `@Scheduled` メソッドを宣言しているBeanで、Scheduler拡張機能によって識別されます。"
+msgstr "最後の点が最も重要であると思われます。なぜならば、これはアプリケーションのエントリーポイントが削除できないようにする方法だからです。例えば、RESTEasyエクステンションで識別されるJAX-RSリソースクラスが良い例です。もう1つの例は、 `@Scheduled` メソッドを宣言しているBeanで、Schedulerエクステンションによって識別されます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:53
-#, fuzzy
 msgid "An _unused_ bean:"
-msgstr "_未使用の_Beanです。"
+msgstr "_未使用の_Bean:"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:55
-#, fuzzy
 msgid "is not unremovable, and"
-msgstr "は、取り外しができないものではなく"
+msgstr "削除不可能ではないこと"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:56
-#, fuzzy
 msgid "is not eligible for injection to any injection point in the dependency tree, and"
-msgstr "は、依存関係ツリーのどの注入ポイントにも注入することができず、また"
+msgstr "依存関係ツリーのどの注入ポイントにも注入することが出来ないこと"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:57
-#, fuzzy
 msgid "does not declare any producer which is eligible for injection to any injection point in the dependency tree, and"
-msgstr "は、依存関係ツリーのどの注入ポイントにも注入可能なプロデューサーを宣言していません。"
+msgstr "依存関係ツリーのどの注入ポイントにも注入可能なプロデューサーを宣言していないこと"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:58
-#, fuzzy
 msgid "is not eligible for injection into any `javax.enterprise.inject.Instance` or `javax.inject.Provider` injection point."
-msgstr "は、 `javax.enterprise.inject.Instance` または `javax.inject.Provider` の注入ポイントに注入することはできません。"
+msgstr "`javax.enterprise.inject.Instance` または `javax.inject.Provider` の注入ポイントに注入することが出来ないこと"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:60
-#, fuzzy
 msgid "Finally, unused interceptors and decorators are not associated with any bean."
-msgstr "最後に、未使用のインターセプターとデコレーターは、どのBeanとも関連しません。"
+msgstr "最後に、未使用のインターセプターとデコレーターは、どのBeanとも関連付けられていません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:62
-#, fuzzy
 msgid "When using the dev mode (e.g. running `./mvnw quarkus:dev`), you can see more information about which beans are being removed in the Dev UI."
 msgstr "devモードを使用している場合（例： `./mvnw quarkus:dev` を実行している場合）、どのBeanが削除されているかの詳細な情報をDev UIで見ることができます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-23-unused-beans.adoc:63
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Main Drawback"
 msgstr "主な欠点"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:72
-#, fuzzy
 msgid "But there's one problem.  Quarkus can't detect the programmatic lookup performed via the `CDI.current()` static method.  Therefore, it is possible that a certain bean removal results in a false positive error, i.e. a bean is removed although it's actually used.  In such cases, you'll notice a big warning in the log.  Of course, users and extension authors have several options how to eliminate these errors.  For users, the easiest way is to add a special annotation: `@io.quarkus.arc.Unremovable` or use the `quarkus.arc.unremovable-types` config property.  Finally, it's also possible to disable this optimization via the `quarkus.arc.remove-unused-beans=false` config property."
-msgstr "しかし、1つ問題があります。Quarkusは、 `CDI.current()` 静的メソッドを介して実行されるプログラムによるルックアップを検出できません。そのため、あるビーンの削除で誤検出エラーが発生する可能性があります。つまり、実際に使用されているにもかかわらずビーンが削除されてしまうのです。このような場合には、ログに大きな警告が表示されます。もちろん、ユーザーや拡張機能の作者には、このようなエラーをなくす方法がいくつかあります。ユーザーにとって最も簡単な方法は、特別なアノテーション `@io.quarkus.arc.Unremovable` を追加するか、 `quarkus.arc.unremovable-types` 設定プロパティを使用することです。最後に、 `quarkus.arc.remove-unused-beans=false` の設定プロパティでこの最適化を無効にすることも可能です。"
+msgstr "しかし、1つ問題があります。Quarkusは、 `CDI.current()` 静的メソッドを介して実行されるプログラムによるルックアップを検出できません。そのため、あるビーンの削除で誤検出エラーが発生する可能性があります。つまり、実際に使用されているにもかかわらずビーンが削除されてしまうのです。このような場合には、ログに大きな警告が表示されます。もちろん、ユーザーやエクステンションの作者には、このようなエラーをなくす方法がいくつかあります。ユーザーにとって最も簡単な方法は、特別なアノテーション `@io.quarkus.arc.Unremovable` を追加するか、 `quarkus.arc.unremovable-types` 設定プロパティを使用することです。最後に、 `quarkus.arc.remove-unused-beans=false` の設定プロパティでこの最適化を無効にすることも可能です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-23-unused-beans.adoc:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:76
-#, fuzzy
 msgid "Quarkus detects and removes unused beans to help you on your way to a subatomic application.  And if something goes wrong, there are options that make it possible to configure the behavior of this optimization."
 msgstr "Quarkusは、使用されていないBeanを検出して削除し、サブアトミックアプリケーションへの道を支援します。また、何か問題が発生した場合には、この最適化の動作を設定できるオプションが用意されています。"
