Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-10-03 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,6 +69,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:143
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:152
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:161
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:170
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -117,7 +118,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Trust store type\n"
 "--"
 msgstr ""
 
@@ -129,7 +130,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Trust store location\n"
 "--"
 msgstr ""
 
@@ -141,7 +142,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Trust store password\n"
 "--"
 msgstr ""
 
@@ -149,11 +150,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:79
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.certificates]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.certificates[quarkus.kafka-streams.ssl.truststore.certificates]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Trust store certificates\n"
 "--"
 msgstr ""
 
@@ -161,11 +162,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:88
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Key store type\n"
 "--"
 msgstr ""
 
@@ -173,11 +174,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:97
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Key store location\n"
 "--"
 msgstr ""
 
@@ -185,11 +186,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:106
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.type]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.type[quarkus.kafka-streams.ssl.key.type]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Key store password\n"
 "--"
 msgstr ""
 
@@ -197,11 +198,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:115
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.location]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.location[quarkus.kafka-streams.ssl.key.location]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Key store private key\n"
 "--"
 msgstr ""
 
@@ -209,16 +210,28 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:124
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`\n"
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Key store certificate chain\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:133
+#, no-wrap
+msgid ""
+"[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Password of the private key in the key store\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:142
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`\n"
@@ -230,7 +243,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:142
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:151
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`\n"
@@ -242,7 +255,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:151
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:160
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`\n"
@@ -254,13 +267,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:155
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:164
 #, no-wrap
 msgid "`https`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:160
+#: upstream/_generated-config/main/config/quarkus-kafka-streams-config-group-ssl-config.adoc:169
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`\n"
