Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-19 02:18+0000\n"
+"POT-Creation-Date: 2021-10-06 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -844,7 +844,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-reference.adoc:368
-msgid "Expresions lookups are performed in all config sources. The expression values and expansion values may reside in different config sources."
+msgid "Expressions lookups are performed in all config sources. The expression values and expansion values may reside in different config sources."
 msgstr ""
 
 #. type: Title ===
